# ChessCPP

./: CMakeLists.txt  README.md  check_dependencies.bat  check_dependencies.sh
include/: AI.h  Board.h  Game.h  Piece.h  SDLIncludes.h  StockFish.h  Zobrist.h
src/: AI.cpp  Board.cpp  Game.cpp  Piece.cpp  StockFish.cpp  Zobrist.cpp  main.cpp
